tests/valid/definite/ListGenerator_Valid_2.whiley
void f([[int]] x) where |x| > 0:
    if(|x[0]| > 2):
        print str(x[0][1])


void System::main([string] args):
     [[int]] arr 
     arr = [[1,2,3],[1]]
     f(arr)
