tests/invalid/simple/While_CompileFail_2.whiley
void System::main([string] args):
    int i=0
    int r=0
    while i < |args| where j > 0:
        r = r + |args[i]|
    print str(r)
